# learning-agentic-ai

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.agent/workflows/: add-agent.md
agentic-ai-20260325/: README.md  TDAgentBase.py  TDScoringAgent.py  TDataBase.py  W2-basic-agent.ipynb  exceptions.py  intent_gate.py  logger.py  models.py  test_agent_framework.py  workflow.ipynb
agentic-ai-rola-dali-20260330/: 00-python-refresher.ipynb  1-0-hello-world-llm.ipynb  1-1-hello-world-refactored.ipynb  1-2-hello-langgraph.py  1-guide.md  1-hello-world-llm.ipynb  2-0-travel-agent.ipynb  2-1-travelagent-low-ref.ipynb  2-guide.md  2-hello-langgraph.py  llm-provider.py  workbook.ipynb
docs/: invoke-vs-call-flight-plan.md  learning-langgraph-flight-plan.md  plan.md  prompt-architecture-flight-plan.md
phase1-redis/: keys.py  phase1.ipynb  phase1_step1_basics.py  pubsub_demo.py  redis_client.py  test_keys_schema.py
phase2-celery/: README.md  dispatch.py  safety_dispatch.py  tasks.py
phase3-redis-celery/: ingestion.py  keys.py  models.py  redis_client.py  seed_events.py
phase3-redis-celery/models/: __init__.py  config.py  enums.py  schemas.py
src/agentic_ai/: celery_app.py  config.py  main.py
tracedata-skeleton-20260330/: agent.py  example_scoring_agent.py  example_weather_agent.py  test_event_config.py  tools.py  tracedata.ipynb  tracedata.py  utils.py
tracedata-skeleton-20260330/adapters/: __init__.py  anthropic_adapter.py  base.py  factory.py  llm.py  models.py  openai_adapter.py
tracedata-skeleton-20260330/agents/: __init__.py  (+5 more)
(+21 files in other folders)
