[project]
name = "agentic-ai"
version = "0.1.0"
description = "Walking skeleton for a multi-agent agentic AI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.25.0",
    "celery[redis]>=5.6.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.48",
]

[project.scripts]
agentic-ai = "agentic_ai.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_ai"]
